# EMMIS

./: .dockerignore  .env.example  Dockerfile  README.md  app.py  pyproject.toml
src/emmis/: config.py  database.py  encryption.py
src/emmis/api/: routes.py  schemas.py
src/emmis/model/artifacts/: risk_model.pkl  risk_scaler.pkl
src/emmis/models/: language_model.py  risk_model.py  vision_model.py
